--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+	<body style="background-color:#000000;">
 	<head>
 		<meta charset="utf-8">
 		<title>Die</title>
@@ -7,6 +8,7 @@
 		<script src="processing.js"></script>
 	</head>
 	<body>
+		
 		<header>
 			<h1>roll</h1>
 		</header>
