--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<body style="background-color:#000000;">
 	<head>
 		<meta charset="utf-8">
-		<title>Die</title>
+		<title style="color:blue">>Die</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
