--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<body style="background-color:#000000;">
 	<head>
 		<meta charset="utf-8">
-		<title style="color:white">>Die</title>
+		<title style="color:white;">>Die</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -10,7 +10,7 @@
 	<body>
 		
 		<header>
-			<h1>roll</h1>
+			<h1 style="color:white;">roll</h1>
 		</header>
 			<section id="content">
 				<canvas id="Dice" data-processing-sources="Dice.pde">
