--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 	<body style="background-color:#000000;">
 	<head>
 		<meta charset="utf-8">
-		<title style="color:white;">Die</title>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<title>
+			<t1  style="color:white;"> Die </t1>
+		</title>
+		<link href='http:// googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
