--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<body>
 		
 		<header>
-			<h1 style="color:white;">roll</h1>
+			<h1 style="color:white;">Die</h1>
+			<h2 style="color:white;">Roll</h2>
 		</header>
 			<section id="content">
 				<canvas id="Dice" data-processing-sources="Dice.pde">
